# excelpro

./: BridgeWorX_CommPlusNotifications_Detailed.xlsx  CMakeLists.txt  Dd.py  GENESIS64_KPIWorX_vs_MobileHMI_比較.xlsx  GENESIS64_Transactions_Comms_Activities_numbered.xlsx  README.md  SCADA_Comparison (1).xlsx  SCADA_Comparison_2025-08-22.xlsx  SCADA_Comparison_Final.xlsx  aas  as  car.py  code  line_follower.py  line_follower_launch.py  link  memo  model.config  model.sdf  my_world.world  news  package.xml  pw.py  server_rack_candidates_with_shelves_CORRECTED_20250904_005929.xlsx  setup.cfg  setup.py  ts  word  おすすめ_産業用パネルPC_10選.xlsx  サーバーラック作図.xlsx  サーバーラック比較.xlsx  サーバーラック比較表.xlsx  データマニュピュレータ.xlsx  計測表示板.xlsx  ｃｖ
